Fix CSS alignement of some text fields

--- a/src/styles.css
+++ b/src/styles.css
@@ -558,7 +558,10 @@ fieldset {
 }
 
 legend {
-  margin-bottom: 0;
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   text-transform: uppercase;
 }
 
